--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "canvg": "^3.0.6",
     "core-js": "^3.6.0",
     "dompurify": "^3.2.4",
-    "html2canvas": "^1.0.0-rc.5"
+    "html2canvas-pro": "^1.5.13"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
