--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "canvg": "^3.0.11",
     "core-js": "^3.6.0",
     "dompurify": "^3.2.4",
-    "html2canvas": "^1.0.0-rc.5"
+    "html2canvas-pro": "^1.5.13"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
